Fix article thumbnail display on Safari and add pwa install btn to footer

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -38,3 +38,9 @@ i.fab {
   justify-content: space-evenly;
   padding: $spacing;
 }
+.footer__pwa__btn {
+  background: none;
+  border: none;
+  color: $dark-bg;
+  padding: 0;
+}
